fix overflow header and left-bar

--- a/css/contentVideo.css
+++ b/css/contentVideo.css
@@ -48,6 +48,8 @@
 .link__video img {
     width: 100%;
     height: 100%;
+
+    aspect-ratio: 16 / 9;
 }
 .video-img {
     max-width: 345px;
